--- a/styles/notion.css
+++ b/styles/notion.css
@@ -437,7 +437,7 @@ p {
 	margin: 1.5em 0;
 	padding: 0;
 	border-radius: 0;
-	text-align: center;
+	display: table;
 }
 
 .code,
